[package]
name = "twitch-hunter"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
irc = "1.0.0"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tmi = "0.7.2"
tokio = { version = "1.43.0", features = ["full"] }
