[package]
name = "twitch-hunter"
version = "0.4.2"
edition = "2021"
authors = ["Ayoub DYA <ayoubdya@gmail.com>"]
description = "A simple tool that looks for specific regex patterns in Twitch chat messages."
repository = "https://github.com/ayoubdya/twitch-hunter"
license = "MIT"
readme = "README.md"
keywords = ["twitch", "irc", "chat", "regex", "bot"]
categories = ["command-line-utilities", "network-programming"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
futures-util = "0.3.31"
irc = "1.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
